brunel/out/brunel_580113.err
  File "/home/d.mingers/diverses/brunel/brunel_exp_blau3.py", line 63
    Vres = parspace[ int(sys.argv[ 2 ]) ]  # 250.0
       ^
SyntaxError: invalid syntax
